--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,13 @@
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     <meta name="author" content="Your name goes here">
     <meta name="copyright" content="Maybe consider a Creative Commons license">
-    <link rel="stylesheet" href="{{page.root}}css/foundation.css">
-    <link rel="stylesheet" href="{{page.root}}css/font-awesome.css">
-    <link rel="stylesheet" href="{{page.root}}css/coderay.css">
-    <link rel="stylesheet" href="{{page.root}}css/asciidoctor.css">
-    <script src="{{page.root}}js/vendor/modernizr.js"></script>
-    <script src="{{page.root}}js/toc.js"></script>
+    <link rel="stylesheet" href="{{site.baseurl}}css/foundation.css">
+    <link rel="stylesheet" href="{{site.baseurl}}css/font-awesome.css">
+    <link rel="stylesheet" href="{{site.baseurl}}css/coderay.css">
+    <link rel="stylesheet" href="{{site.baseurl}}css/asciidoctor.css">
+    <script src="{{site.baseurl}}js/vendor/modernizr.js"></script>
+    <script src="{{site.baseurl}}js/vendor/jquery.js"></script>
+    <script src="{{site.baseurl}}js/toc.js"></script>
 </head>
 <body>
 
@@ -26,7 +27,7 @@
         <!-- Title Area -->
         <li class="name">
             <h1>
-                <a href="{{page.root}}">{{site.title}}</a>
+                <a href="{{site.baseurl}}">{{site.title}}</a>
             </h1>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -55,16 +56,16 @@
         <h4>Posts</h4>
         <ul id="posts" class="posts nav">
             {% for post in site.posts limit: 5 %}
-            <li><a href=".{{ post.url }}">{{ post.navtitle }}</a></li>
+            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
             {% endfor %}
         </ul>
 
-        <div class="panel">
+        <!-- <div class="panel">
             <h5>Featured</h5>
 
             <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon
                 nulla pork belly cupidatat meatloaf cow.</p>
-        </div>
+        </div> -->
 
     </aside>
 
@@ -81,14 +82,14 @@
         <hr>
         <div class="row">
             <div class="large-12 columns">
-                <p>Footer</p>
+                <p>学习JHipster</p>
             </div>
         </div>
     </div>
 </footer>
 
-<script src="{{page.root}}js/vendor/jquery.js"></script>
-<script src="{{page.root}}js/foundation.min.js"></script>
+<script src="{{site.baseurl}}js/vendor/jquery.js"></script>
+<script src="{{site.baseurl}}js/foundation.min.js"></script>
 <script>
 $(document).foundation();
 var doc = document.documentElement;
